Improve help output - Reorganize targets with better examples - Prioritize rebuild command in quick start section

--- a/log_output/Makefile
+++ b/log_output/Makefile
@@ -416,48 +416,36 @@ rebuild: clean all
 help:
 	@echo "📘 Kubernetes Local Development Makefile"
 	@echo "========================================="
+	@echo ""
+	@echo "🚀 Quick Start:"
+	@echo "  rebuild    Clean and rebuild everything (recommended)"
+	@echo "  all        Full workflow (deps → build → cluster → deploy)"
+	@echo "  dev        Fast development iteration"
+	@echo ""
+	@echo "🔧 Build & Deploy:"
+	@echo "  build      Build Docker image"
+	@echo "  cluster    Create/start k3d cluster"
+	@echo "  deploy     Deploy pod to cluster"
+	@echo "  clean      Remove all resources"
+	@echo ""
+	@echo "📊 Monitor & Debug:"
+	@echo "  status     System status overview"
+	@echo "  logs       Stream pod logs (Ctrl+C to exit)"
+	@echo "  watch      Live pod status updates"
+	@echo "  debug      Comprehensive debug info"
+	@echo ""
+	@echo "🔗 Interact:"
+	@echo "  shell      Open pod shell"
+	@echo "  config     Show configuration"
+	@echo "  check-deps Verify dependencies"
+	@echo ""
+	@echo "⚙️  Key Variables:"
+	@echo "  DEBUG_ENABLED=true     Verbose output"
+	@echo "  NAMESPACE=testing      Custom namespace"
+	@echo "  AGENTS=1               Single agent node"
+	@echo ""
+	@echo "💡 Examples:"
+	@echo "  make rebuild DEBUG_ENABLED=true AGENTS=1  # Fresh start with debug output and single agent"
+	@echo "  make clean DEBUG_ENABLED=true             # Clean up with debug output"
+	@echo ""
 	@echo "Usage: make [target] [VARIABLE=value]"
-	@echo ""
-	@echo "Main Targets:"
-	@echo "  all        : Full workflow (check-deps, build, cluster, deploy)"
-	@echo "  clean      : Remove all resources (pod, cluster, image)"
-	@echo "  rebuild    : Clean and rebuild everything"
-	@echo "  config     : Show current configuration"
-	@echo ""
-	@echo "Development Targets:"
-	@echo "  dev        : Quick rebuild for development iteration"
-	@echo "  build      : Build Docker image only"
-	@echo "  cluster    : Create/start k3d cluster only"  
-	@echo "  deploy     : Deploy pod to cluster only"
-	@echo ""
-	@echo "Monitoring Targets:"
-	@echo "  status     : Check cluster and pod status"
-	@echo "  logs       : Stream pod logs"
-	@echo "  watch      : Watch pod status changes"
-	@echo "  debug      : Show comprehensive debug information"
-	@echo ""
-	@echo "Interaction Targets:"
-	@echo "  shell      : Open interactive shell in pod"
-	@echo "  check-deps : Verify required tools and dependencies"
-	@echo ""
-	@echo "Configuration Variables:"
-	@echo "  PROJECT_NAME       : Base name for resources (default: log-output)"
-	@echo "  VERSION            : Image version/tag (default: latest)"
-	@echo "  NAMESPACE          : Kubernetes namespace (default: default)"
-	@echo "  AGENTS             : Number of k3d agent nodes (default: 2)"
-	@echo "  DEBUG_ENABLED      : Enable verbose output (default: false)"
-	@echo "  POD_READY_TIMEOUT  : Pod readiness timeout in seconds (default: 30)"
-	@echo ""
-	@echo "Configuration Examples:"
-	@echo "  make DEBUG_ENABLED=true"
-	@echo "  make AGENTS=1 POD_READY_TIMEOUT=60"
-	@echo "  make NAMESPACE=testing"
-	@echo ""
-	@echo "Common Workflow Examples:"
-	@echo "  make           # Full setup (recommended for first run)"
-	@echo "  make config    # Show current configuration"
-	@echo "  make dev       # Quick development iteration"
-	@echo "  make logs      # View application logs"
-	@echo "  make status    # Check system status"
-	@echo "  make debug     # Troubleshoot issues"
-	@echo "  make clean     # Clean up all resources"
