--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -14,11 +14,8 @@ COPY requirements.txt .
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
-
 # Expose the port
-EXPOSE ${PORT}
+EXPOSE $PORT
 
 # Run the application
-CMD ["uvicorn", "todo_app:app", "--host", "0.0.0.0", "--port", "${PORT}"]
+CMD ["python", "todo_app.py", "$PORT"]
