--- a/project/Makefile
+++ b/project/Makefile
@@ -1,7 +1,6 @@
 # ============================================================================
 # PROJECT CONFIGURATION SECTION
 # ============================================================================
-
 # Define core project variables and environment defaults
 
 # Basic project identifiers
@@ -12,36 +11,46 @@ VERSION ?= latest
 # Docker image build and tag settings
 IMAGE_NAME := $(PROJECT_NAME)
 IMAGE_TAG := $(VERSION)
+
 # Path to Dockerfile
 DOCKERFILE ?= Dockerfile
+
 # Extra build args (optional)
 DOCKER_BUILD_ARGS ?=
 
 # Kubernetes/k3d cluster and pod configuration
 CLUSTER_NAME := $(PROJECT_NAME)-cluster
 POD_LABEL := $(PROJECT_NAME)-pod
+
 # Kubernetes namespace
 NAMESPACE ?= default
+
 # Number of k3d agent nodes
 AGENTS ?= 2
+
 # Image pull policy
 IMAGE_PULL_POLICY ?= IfNotPresent
+
 # Pod restart policy
 RESTART_POLICY ?= Never
 
 # Timeouts and log settings
 # Cluster creation timeout
 CLUSTER_TIMEOUT ?= 300s
+
 # Pod readiness wait timeout (seconds)
 POD_READY_TIMEOUT ?= 30
+
 # Number of log lines to show by default
 LOG_TAIL_LINES ?= 50
 
 # Network port configuration
 # Cloudflare DNS (disabled due to k3d issues)
 # DNS_SERVER := 1.1.1.1
+
 # Host port for service
 HOST_PORT ?= 8080
+
 # Container port for service
 CONTAINER_PORT ?= 8000
 
@@ -75,7 +84,7 @@ endif
 # ============================================================================
 # PHONY TARGETS DECLARATION
 # ============================================================================
-.PHONY: clean build cluster deploy all status logs shell rebuild help check-deps watch config debug
+.PHONY: clean build cluster deploy all status logs shell rebuild help check-deps watch config debug generate-deployment
 
 .DEFAULT_GOAL := all
 
@@ -161,12 +170,14 @@ check-deps:
 clean:
 	@echo "🧹 Cleaning resources..."
 	@if [ "$(DEBUG_ENABLED)" = "true" ]; then \
-		echo "🗑️ Deleting pod '$(POD_LABEL)' in namespace '$(NAMESPACE)'..."; \
-		if kubectl delete pod $(POD_LABEL) -n $(NAMESPACE) --ignore-not-found=true --wait=false 2>/dev/null; then \
-			echo "✅ Pod deleted"; \
+		echo "🗑️ Deleting deployment '$(PROJECT_NAME)-deployment' in namespace '$(NAMESPACE)'..."; \
+		if kubectl delete deployment $(PROJECT_NAME)-deployment -n $(NAMESPACE) --ignore-not-found=true --wait=false 2>/dev/null; then \
+			echo "✅ Deployment deleted"; \
 		else \
-			echo "⚠️ Pod not found or already deleted"; \
+			echo "⚠️ Deployment not found or already deleted"; \
 		fi; \
+		# echo "🗑️ Cleaning up generated files..."; \
+		# rm -f manifests/deployment.yaml 2>/dev/null || true; \
 		echo "🗑️ Deleting cluster '$(CLUSTER_NAME)'..."; \
 		if k3d cluster delete $(CLUSTER_NAME) 2>/dev/null; then \
 			echo "✅ Cluster deleted"; \
@@ -180,7 +191,8 @@ clean:
 			echo "⚠️ Image not found or already deleted"; \
 		fi; \
 	else \
-		kubectl delete pod $(POD_LABEL) -n $(NAMESPACE) --ignore-not-found=true --wait=false >/dev/null 2>&1 || true; \
+		kubectl delete deployment $(PROJECT_NAME)-deployment -n $(NAMESPACE) --ignore-not-found=true --wait=false >/dev/null 2>&1 || true; \
+		# rm -f manifests/deployment.yaml >/dev/null 2>&1 || true; \
 		k3d cluster delete $(CLUSTER_NAME) >/dev/null 2>&1 || true; \
 		docker rmi $(IMAGE_NAME):$(IMAGE_TAG) >/dev/null 2>&1 || true; \
 	fi
@@ -255,38 +267,65 @@ cluster:
 		fi; \
 	fi
 
-# Deploy the application pod to Kubernetes and verify readiness
-deploy:
-	@echo "🚀 Deploying pod..."
+# Generate deployment.yaml from template with current configuration
+generate-deployment:
+	@echo "📝 Generating deployment.yaml..."
+	@mkdir -p manifests
+		@printf '%s\n' \
+	  'apiVersion: apps/v1' \
+	  'kind: Deployment' \
+	  'metadata:' \
+	  '  name: $(PROJECT_NAME)-deployment' \
+	  '  namespace: $(NAMESPACE)' \
+	  '  labels:' \
+	  '    app: $(PROJECT_NAME)' \
+	  'spec:' \
+	  '  replicas: 1' \
+	  '  selector:' \
+	  '    matchLabels:' \
+	  '      app: $(PROJECT_NAME)' \
+	  '  template:' \
+	  '    metadata:' \
+	  '      labels:' \
+	  '        app: $(PROJECT_NAME)' \
+	  '    spec:' \
+	  '      containers:' \
+	  '      - name: $(PROJECT_NAME)-container' \
+	  '        image: $(IMAGE_NAME):$(IMAGE_TAG)' \
+	  '        imagePullPolicy: $(IMAGE_PULL_POLICY)' \
+	  '        ports:' \
+	  '        - containerPort: $(CONTAINER_PORT)' \
+	  '        env:' \
+	  '        - name: PORT' \
+	  '          value: "$(CONTAINER_PORT)"' \
+	  '      restartPolicy: Always' \
+	  > manifests/deployment.yaml
+	@echo "✅ deployment.yaml generated with current configuration"
+
+
+# Deploy the application using deployment.yaml and verify readiness
+deploy: generate-deployment
+	@echo "🚀 Deploying application..."
 	@if [ "$(DEBUG_ENABLED)" = "true" ]; then \
-		echo "   Pod: $(POD_LABEL)"; \
+		echo "   Deployment: $(PROJECT_NAME)-deployment"; \
 		echo "   Namespace: $(NAMESPACE)"; \
 		echo "   Image: $(IMAGE_NAME):$(IMAGE_TAG)"; \
 		echo "   Image Pull Policy: $(IMAGE_PULL_POLICY)"; \
-		echo "   Restart Policy: $(RESTART_POLICY)"; \
 		echo "🔍 Verifying cluster connection..."; \
 		kubectl cluster-info $(KUBECTL_VERBOSITY) || (echo "❌ Cluster connection failed"; exit 1); \
 	else \
 		kubectl cluster-info $(REDIRECT_OUTPUT) || (echo "❌ Cluster connection failed"; exit 1); \
 	fi
-	@if kubectl get pod $(POD_LABEL) -n $(NAMESPACE) $(REDIRECT_OUTPUT) 2>&1; then \
-		echo "⚠️ Pod '$(POD_LABEL)' exists, recreating..."; \
-		kubectl delete pod $(POD_LABEL) -n $(NAMESPACE) --wait=true $(REDIRECT_OUTPUT) || true; \
-	fi
-	@kubectl run $(POD_LABEL) --image=$(IMAGE_NAME):$(IMAGE_TAG) \
-		--image-pull-policy=$(IMAGE_PULL_POLICY) \
-		--restart=$(RESTART_POLICY) \
-		--namespace=$(NAMESPACE) \
-		--env="PORT=$(CONTAINER_PORT)" \
-		$(KUBECTL_VERBOSITY) $(REDIRECT_OUTPUT) && \
-		echo "✅ Pod deployed successfully!" && \
-		echo "⏳ Waiting for pod readiness ($(POD_READY_TIMEOUT)s timeout)..." && \
-		(timeout $(POD_READY_TIMEOUT) kubectl wait --for=condition=Ready pod/$(POD_LABEL) -n $(NAMESPACE) $(REDIRECT_OUTPUT) && \
-		echo "🎉 Pod is ready!" || \
+	@echo "📝 Applying deployment configuration..."
+	@kubectl apply -f manifests/deployment.yaml -n $(NAMESPACE) $(KUBECTL_VERBOSITY) $(REDIRECT_OUTPUT) && \
+		echo "✅ Deployment applied successfully!" && \
+		echo "⏳ Waiting for deployment readiness ($(POD_READY_TIMEOUT)s timeout)..." && \
+		(timeout $(POD_READY_TIMEOUT) kubectl wait --for=condition=Available deployment/$(PROJECT_NAME)-deployment -n $(NAMESPACE) $(REDIRECT_OUTPUT) && \
+		echo "🎉 Deployment is ready!" || \
 		echo "⚠️ Timeout reached. Check: 'make logs' or 'make status'") || \
-		(echo "❌ Pod deployment failed"; exit 1)
+		(echo "❌ Deployment failed"; exit 1)
 
-# Show status of Docker, cluster, and pod (with debug info if enabled)
+# Show status of Docker, cluster, and deployment (with debug info if enabled)
 status:
 	@echo "📊 System Status"
 	@echo "================"
@@ -306,14 +345,17 @@ status:
 		echo "❌ Cluster '$(CLUSTER_NAME)' not found"; \
 	fi
 	@echo ""
-	@echo "📊 Pod Status:"
-	@if kubectl get pod $(POD_LABEL) -n $(NAMESPACE) $(REDIRECT_OUTPUT) 2>&1; then \
-		echo "✅ Pod '$(POD_LABEL)' found in namespace '$(NAMESPACE)'"; \
-		kubectl get pod $(POD_LABEL) -n $(NAMESPACE); \
+	@echo "📊 Deployment Status:"
+	@if kubectl get deployment $(PROJECT_NAME)-deployment -n $(NAMESPACE) $(REDIRECT_OUTPUT) 2>&1; then \
+		echo "✅ Deployment '$(PROJECT_NAME)-deployment' found in namespace '$(NAMESPACE)'"; \
+		kubectl get deployment $(PROJECT_NAME)-deployment -n $(NAMESPACE); \
+		echo ""; \
+		echo "📊 Pod Status:"; \
+		kubectl get pods -l app=$(PROJECT_NAME) -n $(NAMESPACE); \
 		if [ "$(DEBUG_ENABLED)" = "true" ]; then \
 			echo ""; \
-			echo "🔍 Recent Pod Events:"; \
-			kubectl get events --field-selector involvedObject.name=$(POD_LABEL) \
+			echo "🔍 Recent Deployment Events:"; \
+			kubectl get events --field-selector involvedObject.name=$(PROJECT_NAME)-deployment \
 				--sort-by=.lastTimestamp -n $(NAMESPACE) 2>/dev/null | tail -5 || \
 				echo "No events found"; \
 		fi; \
@@ -325,22 +367,22 @@ status:
 
 # Stream pod logs with user-friendly error handling
 logs:
-	@echo "📜 Streaming logs for pod '$(POD_LABEL)' (last $(LOG_TAIL_LINES) lines)"
-	@echo "   Press Ctrl+C to exit..."
-	@kubectl logs $(POD_LABEL) -f --tail=$(LOG_TAIL_LINES) -n $(NAMESPACE) 2>/dev/null || \
+	@echo "📜 Streaming logs for deployment '$(PROJECT_NAME)-deployment' (last $(LOG_TAIL_LINES) lines)"
+	@echo "  Press Ctrl+C to exit..."
+	@kubectl logs deployment/$(PROJECT_NAME)-deployment -f --tail=$(LOG_TAIL_LINES) -n $(NAMESPACE) 2>/dev/null || \
 		(EXIT_CODE=$$?; \
 		if [ $$EXIT_CODE -eq 130 ]; then \
 			echo "✅ Log streaming stopped by user"; \
 		else \
-			echo "⚠️ Log streaming failed - checking pod status..."; \
-			kubectl get pod $(POD_LABEL) -n $(NAMESPACE) 2>/dev/null || \
-				echo "❌ Pod '$(POD_LABEL)' not found in namespace '$(NAMESPACE)'"; \
+			echo "⚠️ Log streaming failed - checking deployment status..."; \
+			kubectl get deployment $(PROJECT_NAME)-deployment -n $(NAMESPACE) 2>/dev/null || \
+				echo "❌ Deployment '$(PROJECT_NAME)-deployment' not found in namespace '$(NAMESPACE)'"; \
 		fi)
 
 # Continuously watch pod status in the namespace
 watch:
 	@echo "👀 Watching pod status in namespace '$(NAMESPACE)'"
-	@echo "   Press Ctrl+C to exit..."
+	@echo "  Press Ctrl+C to exit..."
 	@if kubectl get namespace $(NAMESPACE) >/dev/null 2>&1; then \
 		watch kubectl get pods -n $(NAMESPACE); \
 	else \
@@ -349,22 +391,25 @@ watch:
 
 # Open an interactive shell in the running pod, fallback to /bin/bash if sh is unavailable
 shell:
-	@echo "🔓 Starting shell session in pod '$(POD_LABEL)'..."
-	@if kubectl exec -it $(POD_LABEL) -n $(NAMESPACE) -- sh 2>/dev/null; then \
-		: ; \
-	else \
-		echo "⚠️ Shell '/bin/sh' failed - trying '/bin/bash'..."; \
-		if kubectl exec -it $(POD_LABEL) -n $(NAMESPACE) -- /bin/bash 2>/dev/null; then \
+	@echo "🔓 Starting shell session in deployment '$(PROJECT_NAME)-deployment'..."
+	@POD_NAME=$$(kubectl get pods -l app=$(PROJECT_NAME) -n $(NAMESPACE) -o jsonpath='{.items[0].metadata.name}' 2>/dev/null); \
+	if [ -n "$$POD_NAME" ]; then \
+		echo "🔓 Connecting to pod: $$POD_NAME"; \
+		if kubectl exec -it $$POD_NAME -n $(NAMESPACE) -- sh 2>/dev/null; then \
 			: ; \
 		else \
-			echo "❌ No shell available - pod may not be running or ready"; \
-			if kubectl get pod $(POD_LABEL) -n $(NAMESPACE) >/dev/null 2>&1; then \
-				echo "Pod status:"; \
-				kubectl get pod $(POD_LABEL) -n $(NAMESPACE); \
+			echo "⚠️ Shell '/bin/sh' failed - trying '/bin/bash'..."; \
+			if kubectl exec -it $$POD_NAME -n $(NAMESPACE) -- /bin/bash 2>/dev/null; then \
+				: ; \
 			else \
-				echo "❌ Pod '$(POD_LABEL)' not found in namespace '$(NAMESPACE)'"; \
+				echo "❌ No shell available - pod may not be running or ready"; \
+				kubectl get pods -l app=$(PROJECT_NAME) -n $(NAMESPACE); \
 			fi; \
 		fi; \
+	else \
+		echo "❌ No pods found for deployment '$(PROJECT_NAME)-deployment' in namespace '$(NAMESPACE)'"; \
+		kubectl get deployment $(PROJECT_NAME)-deployment -n $(NAMESPACE) 2>/dev/null || \
+			echo "❌ Deployment not found"; \
 	fi
 
 # Print debug information about images, clusters, and pods
@@ -375,7 +420,7 @@ debug:
 	@echo "  IMAGE_NAME: $(IMAGE_NAME)"
 	@echo "  IMAGE_TAG: $(IMAGE_TAG)"
 	@echo "  CLUSTER_NAME: $(CLUSTER_NAME)"
-	@echo "  POD_LABEL: $(POD_LABEL)"
+	@echo "  PROJECT_NAME: $(PROJECT_NAME)"
 	@echo "  NAMESPACE: $(NAMESPACE)"
 	@echo ""
 	@echo "Docker Images:"
@@ -388,6 +433,9 @@ debug:
 	else \
 		k3d cluster list 2>/dev/null; \
 	fi
+	@echo ""
+	@echo "Deployments in namespace '$(NAMESPACE)':"
+	@kubectl get deployments -n $(NAMESPACE) 2>/dev/null || echo "❌ Cannot connect to cluster"
 	@echo ""
 	@echo "All Pods in namespace '$(NAMESPACE)':"
 	@kubectl get pods -n $(NAMESPACE) 2>/dev/null || echo "❌ Cannot connect to cluster"
@@ -409,12 +457,12 @@ help:
 	@echo "🔧 Build & Deploy:"
 	@echo "  build      Build Docker image"
 	@echo "  cluster    Create/start k3d cluster"
-	@echo "  deploy     Deploy pod to cluster"
+	@echo "  deploy     Deploy application to cluster"
 	@echo "  clean      Remove all resources"
 	@echo ""
 	@echo "📊 Monitor & Debug:"
 	@echo "  status     System status overview"
-	@echo "  logs       Stream pod logs (Ctrl+C to exit)"
+	@echo "  logs       Stream application logs (Ctrl+C to exit)"
 	@echo "  watch      Live pod status updates"
 	@echo "  debug      Comprehensive debug info"
 	@echo ""
