--- a/log_output/Makefile
+++ b/log_output/Makefile
@@ -300,41 +300,45 @@ generate-deployment:
 	  > manifests/deployment.yaml
 	@echo "✅ deployment.yaml generated with current configuration"
 
-
-# Deploy the application using deployment.yaml and verify readiness
-deploy: generate-deployment
+# Apply manifests to the cluster
+deploy:
 	@echo "🚀 Deploying application..."
 	@if [ "$(DEBUG_ENABLED)" = "true" ]; then \
-		echo "   Deployment: $(PROJECT_NAME)-deployment"; \
-		echo "   Namespace: $(NAMESPACE)"; \
-		echo "   Image: $(IMAGE_NAME):$(IMAGE_TAG)"; \
-		echo "   Image Pull Policy: $(IMAGE_PULL_POLICY)"; \
+		echo " Deployment: $(PROJECT_NAME)-deployment"; \
+		echo " Namespace: $(NAMESPACE)"; \
+		echo " Image: $(IMAGE_NAME):$(IMAGE_TAG)"; \
+		echo " Image Pull Policy: $(IMAGE_PULL_POLICY)"; \
 		echo "🔍 Verifying cluster connection..."; \
 		kubectl cluster-info $(KUBECTL_VERBOSITY) || (echo "❌ Cluster connection failed"; exit 1); \
 	else \
 		kubectl cluster-info $(REDIRECT_OUTPUT) || (echo "❌ Cluster connection failed"; exit 1); \
 	fi
 	@echo "📝 Applying manifests individually..."
-	@for f in $(shell ls manifests/*.yaml | sort); do \
+	@set -e; \
+	for f in $$(ls manifests/*.yaml | sort); do \
 		echo "Applying: $$f"; \
-		kubectl apply -f $$f -n $(NAMESPACE) $(KUBECTL_VERBOSITY) $(REDIRECT_OUTPUT); \
-	done && \
-	echo "✅ Applied all manifests successfully!" && \
-	echo "⏳ Waiting for rollout status ($(POD_READY_TIMEOUT)s timeout)..." && \
-	kubectl rollout status deployment/$(PROJECT_NAME)-deployment -n $(NAMESPACE) --timeout=$(POD_READY_TIMEOUT)s && \
-	echo "🎉 Deployment is ready!" && \
-	NODE_IP=$(shell kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type=="InternalIP")].address}') && \
-	for i in 1 2 3 4 5; do \
-        NODE_PORT=$$(kubectl get svc log-output-svc -n $(NAMESPACE) -o jsonpath='{.spec.ports[0].nodePort}' 2>/dev/null); \
-        if [ -n "$$NODE_PORT" ]; then break; fi; \
-        echo "Waiting for log-output-svc NodePort..."; sleep 2; \
-    done; \
-    if [ -n "$$NODE_PORT" ]; then \
-        echo "Access the status endpoint at: http://$$NODE_IP:$$NODE_PORT/status"; \
-    else \
-        echo "⚠️ Could not determine NodePort for log-output-svc. Check 'kubectl get svc -n $(NAMESPACE)'"; \
-    fi || \
-	( echo "⚠️ Timeout reached. Check: 'make logs' or 'make status'"; exit 1 )
+		kubectl apply -f $$f -n $(NAMESPACE) $(KUBECTL_VERBOSITY) $(REDIRECT_OUTPUT) || \
+		(echo "❌ Failed to apply manifest: $$f"; exit 1); \
+	done; \
+	echo "✅ Applied all manifests successfully!"
+	@echo "⏳ Waiting for rollout status ($(POD_READY_TIMEOUT)s timeout)..."
+	@kubectl rollout status deployment/$(PROJECT_NAME)-deployment -n $(NAMESPACE) --timeout=$(POD_READY_TIMEOUT)s || \
+	(echo "⚠️ Timeout reached. Check: 'make logs' or 'make status'"; exit 1)
+	@echo "⏳ Fetching NodeIP..."
+	@NODE_IP=$$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type=="InternalIP")].address}'); \
+	[ -n "$$NODE_IP" ] || (echo "❌ Unable to determine NodeIP"; exit 1); \
+	echo "⏳ Fetching service NodePort (retries up to 10 seconds)..."; \
+	for attempt in {1..5}; do \
+		NODE_PORT=$$(kubectl get svc $(PROJECT_NAME)-svc -n $(NAMESPACE) \
+		-o jsonpath='{.spec.ports[0].nodePort}' 2>/dev/null); \
+		[ -n "$$NODE_PORT" ] && break; \
+		echo "⏳ Waiting for $(PROJECT_NAME)-svc NodePort..."; sleep 2; \
+	done; \
+	if [ -n "$$NODE_PORT" ]; then \
+		echo "✅ Deployment complete. Access /status at: http://$$NODE_IP:$$NODE_PORT/status"; \
+	else \
+		echo "❌ Unable to determine NodePort"; exit 1; \
+	fi
 
 # Show status of Docker, cluster, and deployment (with debug info if enabled)
 status:
