Match structure for both applications

--- a/log_output/Dockerfile
+++ b/log_output/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.12-slim
 
 # Ensure Python output is unbuffered (important for Docker logs)
 ENV PYTHONUNBUFFERED=1
+ENV PORT=8000
 
 WORKDIR /app
 
@@ -9,4 +10,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY app.py .
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+EXPOSE $PORT
+
+CMD ["python", "app.py", "$PORT"]
