Switch services to ClusterIP and simplify ingress
- Change Service resources from NodePort to ClusterIP for internal-only exposure
- Remove host field from ingress rules for broader compatibility
- Clean up service manifests by dropping unnecessary nodePort and comments

--- a/log_output/manifests/ingress.yaml
+++ b/log_output/manifests/ingress.yaml
@@ -4,8 +4,7 @@ metadata:
   name: log-output-ingress
 spec:
   rules:
-    - host: log-output.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
