--- a/log_output/manifests/service.yaml
+++ b/log_output/manifests/service.yaml
@@ -3,12 +3,11 @@ kind: Service
 metadata:
   name: log-output-svc
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
-    app: log-output # This should match the app label in the deployment
+    app: log-output
   ports:
     - name: http
-      nodePort: 30080 # NodePort must be unique in the cluster
       protocol: TCP
       port: 1234
       targetPort: 8000
