--- a/log-output/manifests/ingress.yaml
+++ b/log-output/manifests/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: log-output-ingress
 spec:
+  ingressClassName: traefik
   rules:
     - host: log-output.local
       http:
