--- a/project/manifests/ingress.yaml
+++ b/project/manifests/ingress.yaml
@@ -1,16 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: todo-app-ingress
+  name: project-ingress
 spec:
+  ingressClassName: traefik
   rules:
-    - host: todo-app.local
+    - host: project.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: todo-app-svc
+                name: project-svc
                 port:
                   number: 1234
