--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -12,4 +12,5 @@ COPY app.py .
 
 EXPOSE $PORT
 
-CMD ["python", "app.py", "$PORT"]
+# CMD ["python", "app.py", "$PORT"]
+CMD sh -c "uvicorn app:app --host 0.0.0.0 --port ${PORT}"
