Split files for multi-containerization
- Separate generator and status services into distinct containers
- Update deployment manifests for multi-container architecture
- Configure shared volume for inter-container communication
- Set up proper port mapping and environment variables
- Improve container resource management

--- a/log-output/Dockerfile
+++ b/log-output/Dockerfile
@@ -1,15 +1,26 @@
-FROM python:3.12-slim
+# Builder stage for both images
+FROM python:3.12-slim AS base
 
-# Ensure Python output is unbuffered (important for Docker logs)
+# Common environment variables
 ENV PYTHONUNBUFFERED=1
 ENV PORT=8000
 
-WORKDIR /app
+# Create shared directory
+RUN mkdir -p /app/shared
 
+# Build generator image
+FROM base AS generator
+WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY app.py .
+COPY log_generator.py .
+CMD ["python", "log_generator.py"]
 
+# Build status image
+FROM base AS status
+WORKDIR /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY log_status.py .
 EXPOSE $PORT
-
-CMD ["python", "app.py", "$PORT"]
+CMD ["python", "log_status.py", "$PORT"]
