Update log-output Kubernetes manifests for improved port configuration and ingress
- Add explicit named ports to both generator (8001) and status (8002) containers in deployment
- Remove hardcoded PORT environment variable from status container configuration
- Update service targetPort from 8000 to 8002 to match status container port
- Add Traefik entrypoint annotation to ingress for explicit web traffic routing
- Standardize port naming convention with 'http' protocol specification across manifests

--- a/log-output/manifests/deployment.yaml
+++ b/log-output/manifests/deployment.yaml
@@ -18,17 +18,20 @@ spec:
         - name: log-output-generator
           image: log-output-app-generator:latest
           imagePullPolicy: IfNotPresent
+          ports:
+            - name: http
+              containerPort: 8001
+              protocol: TCP
           volumeMounts:
             - name: shared-volume
               mountPath: /app/shared
         - name: log-output-status
           image: log-output-app-status:latest
           imagePullPolicy: IfNotPresent
-          env:
-            - name: PORT
-              value: "8000"
           ports:
-            - containerPort: 8000
+            - name: http
+              containerPort: 8002
+              protocol: TCP
           volumeMounts:
             - name: shared-volume
               mountPath: /app/shared
