--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -13,4 +13,4 @@ COPY app.py .
 EXPOSE $PORT
 
 # CMD ["python", "app.py", "$PORT"]
-CMD sh -c "uvicorn app:app --host 0.0.0.0 --port ${PORT}"
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "${PORT}"]
