Enhance Makefile with PV management and multi-project support
- Add apply-pv, delete-pv, and multi targets to handle persistent volumes and batch project operations
- Update rebuild and all workflows to include PV application
- Fix indentation in deploy target
- Replace placeholder node name in persistentvolume.yaml with specific k3d agent node

--- a/persistentvolume.yaml
+++ b/persistentvolume.yaml
@@ -21,7 +21,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - REPLACE_NODE_NAME
+          - k3d-log-output-cluster-agent-0
   claimRef:
     namespace: ping-pong-cluster
     name: shared-storage-claim
@@ -49,7 +49,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - REPLACE_NODE_NAME
+          - k3d-log-output-cluster-agent-0
   claimRef:
     namespace: log-output-cluster
     name: shared-storage-claim
