Unify cluster and namespace configuration
- Changed default CLUSTER_NAME to 'devops-cluster' for shared cluster usage
- Updated NAMESPACE to use consistent '$(PROJECT_NAME)-ns' format
- Improved PV apply logic with better node detection and error handling
- Fixed hardcoded node names in persistentvolume.yaml to use dynamic replacement
- Standardized namespace references in PV claimRefs to use '-ns' suffix

--- a/persistentvolume.yaml
+++ b/persistentvolume.yaml
@@ -21,9 +21,9 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - k3d-log-output-cluster-agent-0
+          - REPLACE_NODE_NAME
   claimRef:
-    namespace: ping-pong-cluster
+    namespace: ping-pong-ns
     name: shared-storage-claim
 ---
 apiVersion: v1
@@ -49,7 +49,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - k3d-log-output-cluster-agent-0
+          - REPLACE_NODE_NAME
   claimRef:
-    namespace: log-output-cluster
+    namespace: log-output-ns
     name: shared-storage-claim
