Replace shared volumes with HTTP communication between services
- Remove file-based storage and shared PVC from all deployments
- Implement in-memory counter in ping-pong service with new /pongs endpoint
- Add HTTP client in log-output to fetch ping-pong counts via Kubernetes service discovery
- Implement multiple fallback methods for service discovery (FQDN, ClusterIP, PodIP)
- Update log generator to print status instead of writing to shared file
- Add httpx dependency for HTTP communication

--- a/ping-pong/manifests/deployment.yaml
+++ b/ping-pong/manifests/deployment.yaml
@@ -20,16 +20,16 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8002
-          volumeMounts:
-            - name: shared-storage
-              mountPath: /app/shared
+          # volumeMounts:
+          #   - name: shared-storage
+          #     mountPath: /app/shared
           env:
             - name: PORT
               value: "8002"
-            - name: SHARED_VOLUME_PATH
-              value: "/app/shared/request_count.txt"
-      volumes:
-        - name: shared-storage
-          persistentVolumeClaim:
-            claimName: shared-storage-claim
+            # - name: SHARED_VOLUME_PATH
+            #   value: "/app/shared/request_count.txt"
+      # volumes:
+      #   - name: shared-storage
+      #     persistentVolumeClaim:
+      #       claimName: shared-storage-claim
       restartPolicy: Always
