--- a/log-output/manifests/deployment.yaml
+++ b/log-output/manifests/deployment.yaml
@@ -22,12 +22,12 @@ spec:
             - name: http
               containerPort: 8001
               protocol: TCP
-          volumeMounts:
-            - name: shared-storage
-              mountPath: /app/shared
+          # volumeMounts:
+          #   - name: shared-storage
+          #     mountPath: /app/shared
           env:
-            - name: SHARED_VOLUME_PATH
-              value: "/app/shared/request_count.txt"
+            # - name: SHARED_VOLUME_PATH
+            #   value: "/app/shared/request_count.txt"
         - name: log-output-status
           image: log-output-app-status:latest
           imagePullPolicy: IfNotPresent
@@ -35,15 +35,15 @@ spec:
             - name: http
               containerPort: 8002
               protocol: TCP
-          volumeMounts:
-            - name: shared-storage
-              mountPath: /app/shared
-              readOnly: true
+          # volumeMounts:
+          #   - name: shared-storage
+          #     mountPath: /app/shared
+          #     readOnly: true
           env:
-            - name: SHARED_VOLUME_PATH
-              value: "/app/shared/request_count.txt"
-      volumes:
-        - name: shared-storage
-          persistentVolumeClaim:
-            claimName: shared-storage-claim
+            # - name: SHARED_VOLUME_PATH
+            #   value: "/app/shared/request_count.txt"
+      # volumes:
+      #   - name: shared-storage
+      #     persistentVolumeClaim:
+      #       claimName: shared-storage-claim
       restartPolicy: Always
