Implement todo app with frontend and backend services
- Add multi-container deployment for main and backend services
- Create todo backend API with default items
- Use Jinja2 templates and AJAX for frontend
- Update Makefile and Kubernetes resources for multi-service setup

--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,13 +1,26 @@
-FROM python:3.12-slim
+FROM python:3.12-slim AS base
 
-# Ensure Python output is unbuffered (important for Docker logs)
+# Common environment variables
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /app
+# Create shared directory
+RUN mkdir -p /app/shared
 
+# Build main app image
+FROM base AS main
+WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY app.py .
+COPY templates/ templates/
 
-# CMD ["python", "app.py", "$PORT"]
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8001"]
+
+# Build backend app image
+FROM base AS backend
+WORKDIR /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY app_backend.py .
+
+CMD ["uvicorn", "app_backend:app", "--host", "0.0.0.0", "--port", "8003"]
