Implement dynamic namespace-aware PV/PVC binding
- Add envsubst to Makefile deploy target for variable substitution in manifests
- Consolidate multiple PVs into single dynamic PV with ${NAMESPACE} variable
- Remove hardcoded claimRef bindings to allow dynamic PVC binding
- Add namespace label to PVs and PVC selectors for proper volume matching
- Make log-output service discover ping-pong namespace dynamically via env var
- Inject PING_PONG_NAMESPACE from pod metadata.namespace in deployments
- Keep project PV static with explicit namespace label

--- a/log-output/manifests/deployment.yaml
+++ b/log-output/manifests/deployment.yaml
@@ -26,6 +26,10 @@ spec:
           #   - name: shared-storage
           #     mountPath: /app/shared
           env:
+            - name: PING_PONG_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             # - name: SHARED_VOLUME_PATH
             #   value: "/app/shared/request_count.txt"
         - name: log-output-status
@@ -40,6 +44,10 @@ spec:
           #     mountPath: /app/shared
           #     readOnly: true
           env:
+            - name: PING_PONG_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             # - name: SHARED_VOLUME_PATH
             #   value: "/app/shared/request_count.txt"
       # volumes:
