--- a/persistentvolume.yaml
+++ b/persistentvolume.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: shared-app-pv-ping-pong
+  name: shared-app-pv-${NAMESPACE}
   labels:
     app: shared-storage
+    namespace: ${NAMESPACE}
 spec:
   storageClassName: local-storage
   capacity:
@@ -22,37 +23,6 @@ spec:
           operator: In
           values:
           - REPLACE_NODE_NAME
-  claimRef:
-    namespace: ping-pong-ns
-    name: shared-storage-claim
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: shared-app-pv-log-output
-  labels:
-    app: shared-storage
-spec:
-  storageClassName: local-storage
-  capacity:
-    storage: 100Mi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  local:
-    path: /tmp/kube
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - REPLACE_NODE_NAME
-  claimRef:
-    namespace: log-output-ns
-    name: shared-storage-claim
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -60,6 +30,7 @@ metadata:
   name: shared-app-pv-project
   labels:
     app: shared-storage
+    namespace: project
 spec:
   storageClassName: local-storage
   capacity:
@@ -78,6 +49,3 @@ spec:
           operator: In
           values:
           - REPLACE_NODE_NAME
-  claimRef:
-    namespace: project-ns
-    name: shared-storage-claim
