Standardize PV/PVC labels using 'project' instead of 'namespace'
- Rename label from 'namespace' to 'project' in PVs and PVC selectors
- Make project PV dynamic with ${NAMESPACE} variable (was hardcoded to 'project')
- Standardize label naming across all PV/PVC resources

--- a/log-output/manifests/persistentvolumeclaim.yaml
+++ b/log-output/manifests/persistentvolumeclaim.yaml
@@ -4,6 +4,7 @@ metadata:
   name: shared-storage-claim
   labels:
     app: shared-storage
+    project: ${NAMESPACE}
 spec:
   storageClassName: local-storage
   accessModes:
@@ -14,4 +15,4 @@ spec:
   selector:
     matchLabels:
       app: shared-storage
-      namespace: ${NAMESPACE}
+      project: ${NAMESPACE}
