--- a/persistentvolume.yaml
+++ b/persistentvolume.yaml
@@ -4,7 +4,7 @@ metadata:
   name: shared-app-pv-${NAMESPACE}
   labels:
     app: shared-storage
-    namespace: ${NAMESPACE}
+    project: ${NAMESPACE}
 spec:
   storageClassName: local-storage
   capacity:
@@ -27,10 +27,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: shared-app-pv-project
+  name: shared-app-pv-${NAMESPACE}
   labels:
     app: shared-storage
-    namespace: project
+    project: ${NAMESPACE}
 spec:
   storageClassName: local-storage
   capacity:
