--- a/project/manifests/persistentvolumeclaim.yaml
+++ b/project/manifests/persistentvolumeclaim.yaml
@@ -2,11 +2,17 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: shared-storage-claim
-  namespace: project-ns
+  labels:
+    app: shared-storage
+    project: ${NAMESPACE}
 spec:
+  storageClassName: local-storage
   accessModes:
     - ReadWriteMany
-  storageClassName: local-storage
   resources:
     requests:
       storage: 100Mi
+  selector:
+    matchLabels:
+      app: shared-storage
+      project: ${NAMESPACE}
